# ugc_sprint_1

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.elk.yml  docker-compose.prod.yml  docker-compose.yml
architecture/: c4_container_diagram_asis.puml  c4_container_diagram_tobe.puml  c4_system_context.puml
clickhouse/node1/: config.xml
clickhouse/node2/: config.xml
clickhouse/node3/: config.xml
clickhouse/node4/: config.xml
mongo/: README.md  docker-compose.yml
mongo/data_generator/: config.py  entrypoint.sh  env.sample  main.py  pyproject.toml
mongo/data_generator/models/: __init__.py  models.py
mongo/data_generator/modules/: __init__.py  generator.py  loader.py  mongo.py  tools.py
mongo/services/mongo/: env.sample  init_db.js
mongo/services/mongo-express/: env.sample
sentry-21.12/: sentry_install_log-2022-01-05_16-48-16.txt
sentry-21.12/relay/: credentials.json
sentry-21.12/sentry/: config.yml
services/kafka_to_clickhouse/: Dockerfile  pyproject.toml
services/kafka_to_clickhouse/kafka_to_clickhouse/: conf.py  main.py
services/logstash/: logstash.conf
services/movies_admin/: Dockerfile.dev  Dockerfile.prod
services/movies_async_api/: Dockerfile.dev  Dockerfile.prod
services/movies_async_api/requirements/: base.txt
services/movies_async_api/src/: main.py
services/movies_auth/: Dockerfile.dev  Dockerfile.prod
services/movies_auth/requirements/: base.txt
services/movies_etl/: Dockerfile.dev  Dockerfile.prod
services/nginx/: nginx.conf
services/ugc/: Dockerfile.dev  Dockerfile.prod  entrypoint.sh
(+12 files in other folders)
