[tool.poetry]
name = "data_generator"
version = "0.1.0"
description = ""
authors = ["Artsektor <artsektor@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
