[tool.poetry]
name = "kafka_to_clickhouse"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"
kafka-python = "^2.0.2"
clickhouse-driver = "^0.2.2"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
